WIP - concept controller working with Spring Boot Web