@@ -62,12 +62,15 @@
         <protobuf-java.version>4.30.2-r2</protobuf-java.version>
 
         <!-- Quarkus -->
+	    <spring-boot.version>3.5.5</spring-boot.version>
         <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
         <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
         <quarkus.platform.version>3.25.4</quarkus.platform.version>
+	    <quarkus-resteasy-reactive-jackson.version>3.15.6.2</quarkus-resteasy-reactive-jackson.version>
 
-        <!-- Logging -->
-        <slf4j-jboss-logmanager.version>2.0.1.Final</slf4j-jboss-logmanager.version>
+		<!-- Misc -->
+	    <jackson-datatype-eclipse-collections.version>2.20.0</jackson-datatype-eclipse-collections.version>
+	    <jboss-threads.version>3.9.1</jboss-threads.version>
 
         <!-- Maven Properties -->
         <skipITs>true</skipITs>
@@ -81,37 +84,31 @@
                 <artifactId>data-spinedarray-provider</artifactId>
                 <version>${tinkar-core.version}</version>
             </dependency>
-
             <dependency>
                 <groupId>${tinkar-core.groupId}</groupId>
                 <artifactId>data-ephemeral-provider</artifactId>
                 <version>${tinkar-core.version}</version>
             </dependency>
-
             <dependency>
                 <groupId>${tinkar-core.groupId}</groupId>
                 <artifactId>data-mvstore-provider</artifactId>
                 <version>${tinkar-core.version}</version>
             </dependency>
-
             <dependency>
                 <groupId>${tinkar-core.groupId}</groupId>
                 <artifactId>entity-provider</artifactId>
                 <version>${tinkar-core.version}</version>
             </dependency>
-
             <dependency>
                 <groupId>${tinkar-core.groupId}</groupId>
                 <artifactId>executor-provider</artifactId>
                 <version>${tinkar-core.version}</version>
             </dependency>
-
             <dependency>
                 <groupId>${tinkar-core.groupId}</groupId>
                 <artifactId>search-provider</artifactId>
                 <version>${tinkar-core.version}</version>
             </dependency>
-
 	        <dependency>
 		        <groupId>${tinkar-core.groupId}</groupId>
 		        <artifactId>terms</artifactId>
@@ -125,189 +122,127 @@
                 <version>${eclipse-collections-api.version}</version>
             </dependency>
 
-            <!-- Quarkus -->
-            <dependency>
-                <groupId>${quarkus.platform.group-id}</groupId>
-                <artifactId>${quarkus.platform.artifact-id}</artifactId>
-                <version>${quarkus.platform.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
+            <!-- Spring Boot -->
+	        <dependency>
+		        <groupId>org.springframework.boot</groupId>
+		        <artifactId>spring-boot-dependencies</artifactId>
+		        <version>${spring-boot.version}</version>
+		        <type>pom</type>
+		        <scope>import</scope>
+	        </dependency>
 
-            <!-- Logging -->
-            <dependency>
-                <groupId>org.slf4j</groupId>
-                <artifactId>slf4j-simple</artifactId>
-                <version>${slf4j.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.jboss.slf4j</groupId>
-                <artifactId>slf4j-jboss-logmanager</artifactId>
-                <version>${slf4j-jboss-logmanager.version}</version>
-            </dependency>
+			<!-- Misc. -->
+	        <dependency>
+		        <groupId>com.fasterxml.jackson.datatype</groupId>
+		        <artifactId>jackson-datatype-eclipse-collections</artifactId>
+		        <version>${jackson-datatype-eclipse-collections.version}</version>
+	        </dependency>
+	        <dependency>
+		        <groupId>org.jboss.threads</groupId>
+		        <artifactId>jboss-threads</artifactId>
+		        <version>${jboss-threads.version}</version>
+	        </dependency>
+	        <dependency>
+		        <groupId>org.apache.lucene</groupId>
+		        <artifactId>lucene-core</artifactId>
+		        <version>10.3.0</version>
+	        </dependency>
         </dependencies>
     </dependencyManagement>
 
     <dependencies>
-        <!-- Core Libraries -->
+        <!-- IKE Libraries -->
         <dependency>
             <groupId>${tinkar-core.groupId}</groupId>
             <artifactId>data-spinedarray-provider</artifactId>
         </dependency>
-
         <dependency>
             <groupId>${tinkar-core.groupId}</groupId>
             <artifactId>data-ephemeral-provider</artifactId>
         </dependency>
-
         <dependency>
             <groupId>${tinkar-core.groupId}</groupId>
             <artifactId>data-mvstore-provider</artifactId>
         </dependency>
-
         <dependency>
             <groupId>${tinkar-core.groupId}</groupId>
             <artifactId>entity-provider</artifactId>
         </dependency>
-
         <dependency>
             <groupId>${tinkar-core.groupId}</groupId>
             <artifactId>executor-provider</artifactId>
         </dependency>
-
         <dependency>
             <groupId>${tinkar-core.groupId}</groupId>
             <artifactId>search-provider</artifactId>
         </dependency>
 
-        <!-- JPMS Libraries -->
+        <!-- IKM JPMS Libraries -->
         <dependency>
             <groupId>${tinkar-jpms-deps.groupId}</groupId>
             <artifactId>eclipse-collections-api</artifactId>
             <version>${eclipse-collections-api.version}</version>
         </dependency>
 
-        <!-- Quarkus -->
-        <dependency>
-            <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-arc</artifactId>
-        </dependency>
+        <!-- Spring -->
+	    <dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-web</artifactId>
+		    <exclusions>
+			    <exclusion>
+				    <groupId>org.springframework.boot</groupId>
+				    <artifactId>spring-boot-starter-tomcat</artifactId>
+			    </exclusion>
+		    </exclusions>
+	    </dependency>
+	    <dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-undertow</artifactId>
+	    </dependency>
 
-        <dependency>
-            <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-rest</artifactId>
-        </dependency>
+	    <!-- Misc. -->
+	    <dependency>
+		    <groupId>com.fasterxml.jackson.datatype</groupId>
+		    <artifactId>jackson-datatype-eclipse-collections</artifactId>
+	    </dependency>
 
-        <dependency>
-            <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-smallrye-openapi</artifactId>
-        </dependency>
+	    <dependency>
+		    <groupId>org.jboss.threads</groupId>
+		    <artifactId>jboss-threads</artifactId>
+	    </dependency>
 
-        <dependency>
-            <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-junit5</artifactId>
-            <scope>test</scope>
-        </dependency>
+	    <dependency>
+		    <groupId>org.apache.lucene</groupId>
+		    <artifactId>lucene-core</artifactId>
+	    </dependency>
 
-        <dependency>
-            <groupId>io.rest-assured</groupId>
-            <artifactId>rest-assured</artifactId>
-            <scope>test</scope>
-        </dependency>
-
-        <!-- Logging -->
-        <dependency>
-            <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-rest-jackson</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.slf4j</groupId>
-            <artifactId>slf4j-jboss-logmanager</artifactId>
-        </dependency>
+		<!-- Test -->
+	    <dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-test</artifactId>
+		    <scope>test</scope>
+	    </dependency>
     </dependencies>
 
     <build>
         <pluginManagement>
            <plugins>
-               <plugin>
-                   <groupId>${quarkus.platform.group-id}</groupId>
-                   <artifactId>quarkus-maven-plugin</artifactId>
-                   <version>${quarkus.platform.version}</version>
-               </plugin>
+	           <plugin>
+		           <groupId>org.springframework.boot</groupId>
+		           <artifactId>spring-boot-maven-plugin</artifactId>
+		           <version>${spring-boot.version}</version>
+		           <configuration>
+			           <jvmArguments>--enable-native-access=ALL-UNNAMED</jvmArguments>
+		           </configuration>
+	           </plugin>
            </plugins>
-
         </pluginManagement>
         <plugins>
-            <plugin>
-                <groupId>${quarkus.platform.group-id}</groupId>
-                <artifactId>quarkus-maven-plugin</artifactId>
-                <extensions>true</extensions>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>build</goal>
-                            <goal>generate-code</goal>
-                            <goal>generate-code-tests</goal>
-                            <goal>native-image-agent</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <parameters>true</parameters>
-                </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <systemPropertyVariables>
-                        <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
-                        <maven.home>${maven.home}</maven.home>
-                    </systemPropertyVariables>
-	                <argLine>--add-opens=java.base/java.lang=ALL-UNNAMED</argLine>
-                </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-failsafe-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>integration-test</goal>
-                            <goal>verify</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <systemPropertyVariables>
-                        <native.image.path>${project.build.directory}/${project.build.finalName}-runner</native.image.path>
-                        <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
-                        <maven.home>${maven.home}</maven.home>
-                    </systemPropertyVariables>
-                </configuration>
-            </plugin>
+	        <plugin>
+		        <groupId>org.springframework.boot</groupId>
+		        <artifactId>spring-boot-maven-plugin</artifactId>
+	        </plugin>
         </plugins>
     </build>
 
-    <profiles>
-        <profile>
-            <id>native</id>
-            <activation>
-                <property>
-                    <name>native</name>
-                </property>
-            </activation>
-            <properties>
-                <skipITs>false</skipITs>
-                <quarkus.native.enabled>true</quarkus.native.enabled>
-            </properties>
-        </profile>
-    </profiles>
 </project>
